--- a/docs/static/hj.css
+++ b/docs/static/hj.css
@@ -345,7 +345,7 @@ pre {
     line-height: 1.2em;
     border: 1px solid #C6C9CB;
     font-size: 1em;
-    margin: 0;
+    margin: 10px 0;
     -webkit-box-shadow: 1px 1px 1px #d8d8d8;
     -moz-box-shadow: 1px 1px 1px #d8d8d8;
 }
